# unified-algebra

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CURRENT_CONTRACT.md  README.md  SYNTAX.md  cabal.project  dsl_tutorial.ipynb  explore.ipynb  explore_support.py  hatch_build.py  pyproject.toml  unialg.cabal
.github/workflows/: ci.yml
backends/: cupy.json  jax.json  numpy.json  tensorflow.json  torch.json
docs/: ARCHITECTURE_CONTRACT.md  CHECKPOINT.md  CHECKPOINT_TENSOR.md  COMBINATOR_LAWS.md  DECISIONS.md  DOMAIN_NEUTRAL_CORE.md  EXTENSIONS.md  HASKELL.md  LAYER_REFERENCE.md  NEXT_STEPS.md  NEXT_STEPS_TENSOR.md  SURFACE_SYNTAX.md  SYNTAX.md  algebra-reference.md  assembly-reference.md  morphism-reference.md  parser-reference.md
docs/haskell/: backends.md  core-model.md  generating-code.md  overview.md  reference.md  writing-architectures.md
examples/: 01_semiring_contract.py  02_path_composition.py  03_fan_merge.py  04_batched_axes.py  05_custom_semiring.py  06_attention_pattern.py  07_residual_path.py  run_transformer.py  transformer.ua
explore/: ExploreTest.hs  README.md  conftest.py  gen-catalogue.hs
explore/support/: family_tree.csv
haskell/: unialg.cabal
haskell/backends/: cupy.json  jax.json
haskell/explore/: .gitignore  ExploreTest.hs  README.md  backends.py  conftest.py  harness.py  strategies.py
haskell/explore/Explore/: Archs.hs  Catalogue.hs  Generate.hs  Grammar.hs  Laws.hs  Seed.hs
haskell/explore/Explore/Archs/: Moore.hs  SeqRnn.hs  StreamRnn.hs  TreeRnn.hs
haskell/explore/archs/moore/: Moore.hs  arch.py
haskell/explore/archs/seq_rnn/: SeqRnn.hs  arch.py
haskell/explore/archs/stream_rnn/: StreamRnn.hs  arch.py
haskell/explore/archs/tree_rnn/: TreeRnn.hs  arch.py
haskell/explore/support/haskell/: Catalogue.hs  Generate.hs  Laws.hs  Seed.hs
haskell/explore/test/: ExploreTest.hs
haskell/hydra-src/hydra-0.15.0/: hydra.cabal
haskell/src/: UniAlg.hs
haskell/src/UniAlg/: Backend.hi  Externals.hi  Tensors.hi
haskell/src/UniAlg/Core/: Reduce.hs
haskell/src/UniAlg/Core/Ops/: Generate.hs
haskell/src/UniAlg/Domain/: Tensors.hs
haskell/src/UniAlg/Pipeline/: Backend.hs  Codegen.hs  Externals.hs  Lowering.hs
haskell/src/UniAlg/Semantics/: Arrows.hs  Category.hs  Functors.hs  Optics.hs  Recursion.hs  Schemes.hs
haskell/src/UniAlg/Semantics/Term/: Arrows.hs  Builders.hs  Polynomial.hs
haskell/src/unialg/: __init__.py  main.py  objects.py
haskell/src/unialg/runtime/: boundary.py
haskell/src/unialg/runtime/backends/: jax.json
haskell/src/unialg/semantics/: construct.py  functors.py
haskell/src/unialg/syntax/: _lex.py  parse.py
haskell/src/unialg/tensors/: notation.py
haskell/test/: AdaptTest.hi  BackendSpecTest.hs  DslSmokeTest.hs  GenerateNeuralRecursionSchemes.hs  GeneratePythonInferenceDiagnostic.hi  GeneratePythonTest.hs  LoweringTest.hs  ModuleLoweringTest.hi  OpArityTest.hs  RecursionCodegenTest.hs  TensorsCodegenTest.hi  TensorsCodegenTest.hs  TensorsTest.hs  TestUtils.hs  Transformer.hs
python/: .importlinter  README.md  explore_support.py  pyproject.toml  pyrightconfig.json
python/docs/: COMBINATOR_LAWS.md  EXTENSIONS.md  LEXICON.md  SYNTAX.md
python/src/unialg/: extensions.py
python/src/unialg/runtime/: __init__.py
python/src/unialg/runtime/backends/: torch.json
python/src/unialg/semantics/: morphisms.py  optics.py
python/src/unialg/tensors/: __init__.py
python/tests/: CLAUDE.md  LAW_CATALOG.md
python/tests/properties/: test_expression_laws.py  test_optics_laws.py  test_realize_laws.py  test_recursion_laws.py  test_semiring_laws.py
python/tests/regression/stale_old_api/: legacy_functor.py  legacy_lax_para_contracts.py  legacy_morphism_contracts.py  legacy_para_contracts.py  legacy_unialg_morphism.py  legacy_unialg_para.py
python/tests/scouting/pynguin_targets/: __init__.py
python/tests/semantics/: test_contextual_ops.py  test_expressions.py  test_optic_kind_construction.py
python/tests/support/: strategies.py
python/tests/syntax/: test_extension_loading.py  test_lex_extensions.py  test_optic_kinds.py
python/tests/tensors/: conftest.py  test_e2e.py  test_fusion.py  test_syntax_integration.py
src/: UniAlg.hs
src/UniAlg/: Architecture.hs  Backend.hs  Codegen.hi  Codegen.hs  Lowering.hi  Optics.hs  Reduce.hs  RuntimeArchitecture.hs  Scheme.hs  Shape.hs  Tensor.hs  Term.hs
src/unialg/: __init__.py  _define_ast.py  backend.py  expressions.py.bak  extensions.py  lowering.py  main.py  objects.py  recursion.py.bak  space.py.bak  specs.py  terms.py  views.py
src/unified_algebra/: __init__.py  _assembly.py  _coders.py  _grammar.py  _hydra_setup.py  _lens_threading.py  _resolver.py  backend.py  composition.py  contraction.py  graph.py  lens.py  morphism.py  parser.py  program.py  recursion.py  (+6 more)
test/: BackendExternalArityTest.hi  BackendExternalArityTest.hs  BackendSpecTest.hi  BackendSpecTest.hs  CodegenBoundaryTest.hi  CodegenBoundaryTest.hs  DslSmokeTest.hi  DslSmokeTest.hs  GenerateNeuralRecursionSchemes.hs  GeneratePythonBindingDiagnostic.hi  GeneratePythonBindingDiagnostic.hs  GeneratePythonInferenceDiagnostic.hs  GeneratePythonTest.hi  GeneratePythonTest.hs  LoweringTest.hi  LoweringTest.hs  OpArityTest.hs  README.md  RecursionCodegenTest.hs  TensorsCodegenTest.hs  TensorsTest.hi  TensorsTest.hs  TestUtils.hs  neural_comparison.py
tests/: LAW_CATALOG.md  README.md  conftest.py  test_assembly.py  test_autoencoder.py  test_batched.py  test_catamorphism.py  test_composition.py  test_contraction.py  test_equation.py  test_fan_hyperparams.py  test_feedforward.py  test_fixpoint.py  test_gnn.py  test_lenses.py  test_load_program.py  test_nary_merge.py  test_parser.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14_autoencoder.py  test_phase14_feedforward.py  test_phase14_residual.py  test_phase14_rnn.py  test_phase14_shortest_path.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_product_sort.py  test_program.py  test_residual.py  test_rnn.py  (+4 more)
(+325 files in other folders)
