[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unialg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hypothesis>=6.152.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2,<9.0.0", "pytest-testmon", "hypothesis>=6.152.4", "pynguin>=0.45.0", "numpy", "scipy", "hatchling", "psutil"]

[tool.hatch.build.targets.wheel]
packages = ["src/unialg", "src/hydra"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "semantics: trusted behavioral contracts for the unialg DSL",
    "property: Hypothesis-generated semantic law checks",
    "unit: focused helper or substrate checks",
    "negative: expected failure and rejection-path tests",
    "regression: bug reproductions and reviewed generated tests",
    "generated: reviewed tests originally produced by a generator",
]

[dependency-groups]
dev = [
    "grimp>=3.14",
    "hypothesis>=6.152.4",
    "import-linter>=2.11",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.6",
    "pynguin>=0.45.0",
]

[tool.importlinter]
root_packages = ["unialg"]

[[tool.importlinter.contracts]]
name = "objects are foundational"
type = "forbidden"
source_modules = ["unialg.objects"]
forbidden_modules = [
    "unialg.syntax",
    "unialg.semantics",
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "syntax is pure surface structure"
type = "forbidden"
source_modules = ["unialg.syntax"]
forbidden_modules = [
    "unialg.semantics",
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "semantics cannot depend on lowering or runtime"
type = "forbidden"
source_modules = ["unialg.semantics"]
forbidden_modules = [
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "structure cannot depend on runtime or orchestration"
type = "forbidden"
source_modules = ["unialg.structure"]
forbidden_modules = [
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "runtime is execution-boundary only"
type = "forbidden"
source_modules = ["unialg.runtime"]
forbidden_modules = [
    "unialg.syntax",
    "unialg.semantics",
    "unialg.structure",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "tensor modules stay above runtime and lowering"
type = "forbidden"
source_modules = [
    "unialg.tensors.semirings",
    "unialg.tensors.primitives",
    "unialg.tensors.notation",
    "unialg.tensors.semantics",
    "unialg.tensors.fusion",
]
forbidden_modules = [
    "unialg.structure",
    "unialg.runtime",
    "unialg.main",
]
