cabal-version: 3.0
name:          unialg
version:       0.1.0.0

library
  hs-source-dirs:   src
  exposed-modules:
    UniAlg
    UniAlg.Architecture
    UniAlg.Backend
    UniAlg.Codegen
    UniAlg.Core.Ops
    UniAlg.Optics
    UniAlg.Scheme
    UniAlg.Shape
    UniAlg.Tensor
    UniAlg.Term
  other-modules:
    UniAlg.Backend.Externals
    UniAlg.Backend.Lowering
    UniAlg.Backend.Spec
    UniAlg.Core.BackendSpec
    UniAlg.Core.Ops.Generate
    UniAlg.Core.Reduce
    UniAlg.Scheme.Internal
    UniAlg.Shape.Encode
    UniAlg.Term.Internal
  build-depends:
    base             >= 4.18,
    aeson,
    bytestring,
    containers,
    filepath,
    hydra,
    process,
    profunctors,
    tagged,
    template-haskell >= 2.20,
    text
  default-language: Haskell2010

library explore
  visibility:       public
  hs-source-dirs:
    explore/support/haskell
    explore/archs/seq_rnn
    explore/archs/tree_rnn
    explore/archs/stream_rnn
    explore/archs/moore
  exposed-modules:
    Catalogue
    Generate
    Grammar
    Laws
    Moore
    Seed
    SeqRnn
    StreamRnn
    TreeRnn
  build-depends:
    base    >= 4.18,
    hydra,
    unialg
  default-language: Haskell2010

test-suite explore-test
  type:             exitcode-stdio-1.0
  main-is:          ExploreTest.hs
  hs-source-dirs:   explore, test
  other-modules:    TestUtils
  build-depends:
    base, unialg, explore, hydra, text, process, directory, filepath, test-utils
  default-language: Haskell2010

library test-utils
  visibility:       private
  hs-source-dirs:   test
  exposed-modules:  TestUtils
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite backend-external-arity-test
  type:             exitcode-stdio-1.0
  main-is:          BackendExternalArityTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite backend-spec-test
  type:             exitcode-stdio-1.0
  main-is:          BackendSpecTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite codegen-boundary-test
  type:             exitcode-stdio-1.0
  main-is:          CodegenBoundaryTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite dsl-smoke-test
  type:             exitcode-stdio-1.0
  main-is:          DslSmokeTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite lowering-test
  type:             exitcode-stdio-1.0
  main-is:          LoweringTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite generate-python-test
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite generate-python-inference-diagnostic
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonInferenceDiagnostic.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite generate-python-binding-diagnostic
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonBindingDiagnostic.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite tensors-test
  type:             exitcode-stdio-1.0
  main-is:          TensorsTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite tensors-codegen-test
  type:             exitcode-stdio-1.0
  main-is:          TensorsCodegenTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite recursion-codegen-test
  type:             exitcode-stdio-1.0
  main-is:          RecursionCodegenTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, explore, hydra, text, process, directory, filepath, test-utils
  default-language: Haskell2010

test-suite op-arity-test
  type:             exitcode-stdio-1.0
  main-is:          OpArityTest.hs
  hs-source-dirs:   test
  other-modules:    TestUtils
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

executable neural-recursion-schemes
  main-is:          GenerateNeuralRecursionSchemes.hs
  hs-source-dirs:   test
  ghc-options:      -main-is NeuralRecursionSchemes
  build-depends:    base, unialg, explore
  default-language: Haskell2010
