cabal-version: 3.0
name:          unialg
version:       0.1.0.0

library
  hs-source-dirs:   src
  exposed-modules:
    UniAlg
    UniAlg.Core.Reduce
    UniAlg.Pipeline.Backend
    UniAlg.Pipeline.Codegen
    UniAlg.Pipeline.Externals
    UniAlg.Pipeline.Lowering
    UniAlg.Domain.Tensors
    UniAlg.Semantics.Arrows
    UniAlg.Semantics.Category
    UniAlg.Semantics.Functors
    UniAlg.Semantics.Recursion
    UniAlg.Semantics.Optics
  build-depends:
    base       >= 4.18,
    aeson,
    bytestring,
    containers,
    filepath,
    hydra,
    process,
    profunctors,
    tagged,
    text
  default-language: Haskell2010

library test-utils
  visibility:       private
  hs-source-dirs:   test
  exposed-modules:  TestUtils
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite backend-external-arity-test
  type:             exitcode-stdio-1.0
  main-is:          BackendExternalArityTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite backend-spec-test
  type:             exitcode-stdio-1.0
  main-is:          BackendSpecTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite codegen-boundary-test
  type:             exitcode-stdio-1.0
  main-is:          CodegenBoundaryTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite dsl-smoke-test
  type:             exitcode-stdio-1.0
  main-is:          DslSmokeTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite lowering-test
  type:             exitcode-stdio-1.0
  main-is:          LoweringTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite generate-python-test
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite generate-python-inference-diagnostic
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonInferenceDiagnostic.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite generate-python-binding-diagnostic
  type:             exitcode-stdio-1.0
  main-is:          GeneratePythonBindingDiagnostic.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, containers, test-utils
  default-language: Haskell2010

test-suite tensors-test
  type:             exitcode-stdio-1.0
  main-is:          TensorsTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text
  default-language: Haskell2010

test-suite tensors-codegen-test
  type:             exitcode-stdio-1.0
  main-is:          TensorsCodegenTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

test-suite recursion-codegen-test
  type:             exitcode-stdio-1.0
  main-is:          RecursionCodegenTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, process, test-utils
  default-language: Haskell2010

test-suite op-arity-test
  type:             exitcode-stdio-1.0
  main-is:          OpArityTest.hs
  hs-source-dirs:   test
  build-depends:    base, unialg, hydra, text, test-utils
  default-language: Haskell2010

executable neural-recursion-schemes
  main-is:          GenerateNeuralRecursionSchemes.hs
  hs-source-dirs:   test
  ghc-options:      -main-is NeuralRecursionSchemes
  build-depends:    base, unialg
  default-language: Haskell2010

executable transformer
  main-is:          Transformer.hs
  hs-source-dirs:   test
  ghc-options:      -main-is Transformer
  build-depends:    base, unialg
  default-language: Haskell2010
