[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unialg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hypothesis>=6.152.5",
    "hydra-kernel==0.15.0",
    "mido>=1.3.3",
    "mingus>=0.6.1",
    "tensorflow>=2.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2,<9.0.0", "pytest-testmon", "hypothesis>=6.152.4", "pynguin>=0.45.0", "numpy", "scipy", "hatchling", "psutil"]

[tool.hatch.build.targets.wheel]
packages = ["src/unialg"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "semantics: trusted behavioral contracts for the unialg DSL",
    "property: Hypothesis-generated semantic law checks",
    "unit: focused helper or substrate checks",
    "negative: expected failure and rejection-path tests",
    "regression: bug reproductions and reviewed generated tests",
    "generated: reviewed tests originally produced by a generator",
]

[dependency-groups]
dev = [
    "grimp>=3.14",
    "hypothesis>=6.152.4",
    "import-linter>=2.11",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.6",
    "pynguin>=0.45.0",
]

[tool.uv]
# Keep uv's lock/temp cache inside the writable project workspace.
cache-dir = ".uv-cache"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "PLW", "PLC", "RUF", "COM"]
ignore = [
    "ARG",    # dispatch dicts use uniform (n, _p) / (b, h, m) signatures
    "TRY003", # long exception messages in raise
    "EM",     # exception string style
    "COM812", # trailing comma conflicts with formatter
    "RUF001", # ambiguous unicode — intentional mathematical notation (⋆, →, ×)
    "RUF002", # ambiguous unicode in docstrings — same
]

[tool.importlinter]
root_packages = ["unialg"]

[[tool.importlinter.contracts]]
name = "objects are foundational"
type = "forbidden"
source_modules = ["unialg.objects"]
forbidden_modules = [
    "unialg.syntax",
    "unialg.semantics",
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "syntax is pure surface structure"
type = "forbidden"
source_modules = ["unialg.syntax"]
forbidden_modules = [
    "unialg.semantics",
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "semantics cannot depend on lowering or runtime"
type = "forbidden"
source_modules = ["unialg.semantics"]
forbidden_modules = [
    "unialg.structure",
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "structure cannot depend on runtime or orchestration"
type = "forbidden"
source_modules = ["unialg.structure"]
forbidden_modules = [
    "unialg.runtime",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "runtime is execution-boundary only"
type = "forbidden"
source_modules = ["unialg.runtime"]
forbidden_modules = [
    "unialg.syntax",
    "unialg.semantics",
    "unialg.structure",
    "unialg.tensors",
    "unialg.main",
]

[[tool.importlinter.contracts]]
name = "tensor modules stay above runtime and lowering"
type = "forbidden"
source_modules = [
    "unialg.tensors.semirings",
    "unialg.tensors.primitives",
    "unialg.tensors.notation",
    "unialg.tensors.semantics",
    "unialg.tensors.fusion",
]
forbidden_modules = [
    "unialg.structure",
    "unialg.runtime",
    "unialg.main",
]
